--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ h1 {
 
 }
 
-section {
+.about-content {
+    margin-top: 120px;
+}
+
+.flexible-container {
     display: flex;
     margin-bottom: -30%;
 }
@@ -35,17 +39,50 @@ section {
     border-radius: 10px;
 }
 
-.about .half-width .about-img img {}
-
-.about .about-img img {}
-
 .about {
     .about-img {
 
         img {
-            width: 90%;
+            width: 80%;
 
 
         }
     }
+}
+
+.about-one {
+    margin: 300px 20px 20px 20px;
+
+    .third {
+        margin-bottom: 50px;
+        margin-top: 200px;
+    }
+
+    .flexible-container {
+        margin-bottom: 100px;
+
+        .box-1 {
+            border-left: 5px solid rgb(204, 0, 255);
+
+        }
+
+        .box-2 {
+            border-left: 5px dotted violet;
+        }
+
+        .half-width {
+            margin: 0 15px;
+            padding: 10px;
+            border-radius: 20px;
+            box-shadow: 10px 10px 100px gray;
+
+
+            .orange-color {
+                color: orange;
+            }
+        }
+
+    }
+
+
 }
